--- a/src/app/acceuil 2/service-description.component.html
+++ b/src/app/acceuil 2/service-description.component.html
@@ -1,4 +1,4 @@
-<div class="shadow-lg bg-white rounded-lg">
+<div class="shadow-lg bg-white rounded-lg" dir="ltr">
   <div class="p-6">
     <h2 class="flex items-center gap-2 text-xl font-bold mb-4">
       <span class="text-blue-900">🛈</span>
