--- a/src/app/acceuil 2/acceuil2.component.html
+++ b/src/app/acceuil 2/acceuil2.component.html
@@ -1,7 +1,7 @@
-<div class="min-h-screen bg-gradient-to-br from-blue-50 to-indigo-50" [class.rtl]="language === 'ar'" [class.ltr]="language === 'fr'">
+<div class="min-h-screen bg-gradient-to-br from-blue-50 to-indigo-50" dir="ltr">
   <app-header [language]="language" (languageChange)="onLanguageChange($event)"></app-header>
 
-  <main class="container mx-auto px-4 py-8 max-w-7xl">
+  <main class="container mx-auto px-4 py-8 max-w-7xl" dir="ltr">
     <div class="grid lg:grid-cols-2 gap-8">
       <div class="space-y-6">
         <app-service-description [language]="language"></app-service-description>
